--- a/04/style.css
+++ b/04/style.css
@@ -1,6 +1,43 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;1,500;1,700;0,900,1,900&display=swap");
 body {
   background-color: chocolate;
-  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  position: relative;
+}
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 800;
+}
+h2 {
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-weight: 900;
+}
+.cloud {
+  position: relative;
+  width: 200px;
+  top: 275px;
+  right: 400px;
+  padding-top: 100px;
+}
+
+.bottom-cloud {
+  position: relative;
+  width: 200px;
+  bottom: 375px;
+  left: 600px;
+}
+
+.mountain {
+  position: relative;
+  right: 100px;
+}
+
+.header {
+  position: relative;
+  bottom: 100px;
 }
 
 .box {
@@ -30,8 +67,4 @@ body {
 }
 .box-mb {
   margin-bottom: 50px;
-}
-h1,
-h2 {
-  background-color: transparent;
 }
