--- a/04/style.css
+++ b/04/style.css
@@ -1,10 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;1,500;1,700;0,900,1,900&display=swap");
+@font-face {
+  font-family: "Comic Sans MS";
+  src: url("./comic.ttf"), format("truetype");
+}
 body {
-  background-color: chocolate;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
   position: relative;
+}
+* {
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 h1 {
   font-family: "Roboto", sans-serif;
@@ -14,6 +21,12 @@ h2 {
   font-family: "Roboto", sans-serif;
   font-style: italic;
   font-weight: 900;
+}
+
+h3 {
+  padding-top: 10px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 600;
 }
 .cloud {
   position: relative;
@@ -26,8 +39,8 @@ h2 {
 .bottom-cloud {
   position: relative;
   width: 200px;
-  bottom: 375px;
-  left: 600px;
+  bottom: 575px;
+  left: 700px;
 }
 
 .mountain {
@@ -67,4 +80,40 @@ h2 {
 }
 .box-mb {
   margin-bottom: 50px;
+}
+
+.skills {
+  display: flex;
+  justify-content: space-evenly;
+  font-weight: bold;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#section-1 {
+  background-color: chocolate;
+  margin-bottom: 0px;
+}
+
+#section-2 {
+  background-color: darkgreen;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-bottom: 100px;
+}
+
+.section-2-header {
+  font-weight: 900;
+  font-size: 4.5em;
+  padding-bottom: 100px;
+  color: rgb(186, 65, 129);
+  font-family: "Comic Sans MS", sans-serif;
+}
+
+.skills-text {
+  font-weight: bold;
+  font-size: 3em;
 }
