--- a/04/style.css
+++ b/04/style.css
@@ -19,11 +19,13 @@ body {
 h1 {
   font-family: "Roboto", sans-serif;
   font-weight: 800;
+  font-size: 4em;
 }
 h2 {
   font-family: "Roboto", sans-serif;
   font-style: italic;
   font-weight: 900;
+  font-size: 4em;
 }
 h3 {
   font-family: "Roboto", sans-serif;
