--- a/ejs-blog/views/home.ejs
+++ b/ejs-blog/views/home.ejs
@@ -1,11 +1,14 @@
 <%- include('partials/header'); %>
-<h1>Home</h1>
-<p><%= homeContent %></p>
-<h2>Posts</h2>
-<% posts.forEach( (post,index) => { %>
-<h3><%=post.postTitle%></h3>
-<% let postId = `/posts/${index}` %>
-<a href=<%= postId %>>
-  <p>Read More...</p></a
->
+<div class="container">
+  <h1>Home</h1>
+  <p><%= homeContent %></p>
+  <h2>Posts</h2>
+  <% posts.forEach( (post,index) => { %>
+  <h3><%=post.postTitle%></h3>
+  <% let postId = `/posts/${index}` %>
+
+  <p>
+    <%= post.postBody.substring(0,100)%>...<a href=<%= postId %>>Read More</a>
+  </p>
+</div>
 <%})%> <%- include('partials/footer'); %>
